--- a/Style.css
+++ b/Style.css
@@ -18,7 +18,7 @@ html,body{
   height: 1123px;
   margin:24px auto;
   background:white;
-  padding:28px 28px 24px;
+  padding:16px 28px 24px;
   border:1px solid var(--rule);
   position: relative;
 }
@@ -40,7 +40,7 @@ html,body{
   display: flex;
   flex-direction: column-reverse;
   gap: 12px;
-  padding: 15px 20px;
+  padding: 5px 20px;
   border-radius: 6px;
   font-size: 10px;
   dborder-bottom: 2px solid var(--accent);
@@ -333,7 +333,7 @@ main > section:first-child { /* Perfil profesional */
 
 main > section:nth-child(2) { /* Tecnologías */
   position: absolute;
-  width: 260px;
+  width: 259px;
   left: -10px;
   top: 253px;
   z-index: 2;
@@ -375,8 +375,8 @@ ul.clean{list-style:none;padding:0;margin:0}
   padding:3px 6px;
   border:1px solid #ffe263;
   border-radius:6px;
-  margin:5px 5px 0 0;
-  font-size:12px;
+  margin:7px 5px 0 0;
+  font-size:13px;
   background: #ffffff;
   color: #333;
   transition: all 0.2s ease;
@@ -448,7 +448,7 @@ ul.clean{list-style:none;padding:0;margin:0}
   display: flex;
   flex-direction: column;
   gap: 3px;
-  padding-bottom: 8px;
+  padding-bottom: 14px;
   border-bottom: none;
 }
 
@@ -466,17 +466,22 @@ ul.clean{list-style:none;padding:0;margin:0}
 }
 
 .group-label {
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 700;
   color: #444;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  border-bottom: 1px solid #333;
+  padding-bottom: 2px;
+  margin-bottom: 5px;
+  margin-right: 10px;
 }
 
 .group-content {
   display: flex;
   flex-wrap: wrap;
-  gap: -2px;
+  gap: 0px;
+  justify-content: space-between;
 }
 
 .proj {
@@ -505,6 +510,13 @@ ul.clean{list-style:none;padding:0;margin:0}
   color: #444;
   text-align: justify;
   hyphens: auto;
+}
+
+.half-underline {
+  background: linear-gradient(to right, var(--accent) 0%, var(--accent) 50%, transparent 50%, transparent 100%);
+  background-position: 0 100%;
+  background-size: 100% 2px;
+  background-repeat: no-repeat;
 }
 
 .proj a{
