--- a/Style.css
+++ b/Style.css
@@ -46,7 +46,7 @@ html,body{
   dborder-bottom: 2px solid var(--accent);
   width: 350px;
   position: absolute;
-  top: 25px;
+  top: 23px;
   right: -23px;
   text-align: left;
   z-index: 10;
@@ -285,8 +285,8 @@ main > section:first-child h2 {
 
 aside {
   margin-left: -100px;
-  margin-top: 0px;
-  margin-right: 12px;
+  margin-top: 13px;
+  margin-right: 1px;
 }
 
 .grid::after {
@@ -347,6 +347,10 @@ main > section:nth-child(3) { /* Experiencia */
   z-index: 2;
 }
 
+aside > section:nth-child(2) {
+  margin-top: -12px;
+}
+
 aside > section:nth-child(3) {
   margin-bottom: 20px;
 }
@@ -362,10 +366,26 @@ ul.clean{list-style:none;padding:0;margin:0}
   grid-template-columns:auto 1fr;
   gap:8px;
   margin-bottom:10px;
-  background: #f9f9f9;
+  background: #f3f3f3b4;
   padding: 8px 10px;
   border-radius: 4px;
   border-left: 3px solid var(--accent);
+}
+
+/* Experiencia con años en columna */
+aside > section:nth-child(2) .item {
+  grid-template-columns: 1fr;
+  gap: 2px;
+}
+
+aside > section:nth-child(2) .when {
+  margin-bottom: 3px;
+  font-weight: 700;
+}
+
+aside > section:nth-child(2) .item > div:last-child {
+  text-align: justify;
+  hyphens: auto;
 }
 
 .when{font-size:12px;color:var(--muted);font-weight:600}
