--- a/Style.css
+++ b/Style.css
@@ -327,7 +327,7 @@ main > section:nth-child(2) { /* Tecnologías */
   position: absolute;
   width: 259px;
   right: 480px;
-  top: 266px;
+  top: 251px;
   z-index: 2;
 }
 
@@ -335,20 +335,22 @@ main > section:nth-child(3) { /* Experiencia */
   position: absolute;
   width: 250px;
   left: 20px;
-  top: 625px;
+  top: -50px;
   z-index: 2;
 }
 
-aside > section:nth-child(2) {
-  margin-top: 0px;
+aside > section:nth-child(2) { 
+  margin-top: -10px;
 }
 
 aside > section:nth-child(3) {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 aside > section:nth-child(4) { /* Idiomas */
+  margin-top: 770px !important;
   margin-bottom: 10px;
+  
 }
 
 ul.clean{list-style:none;padding:0;margin:0}
@@ -466,7 +468,7 @@ aside > section:nth-child(2) .item > div:last-child {
 
 .skills-group:last-child {
   border-bottom: none;
-  margin-top: 4px;
+  margin-top: 0px;
 }
 
 .skills-group.subsection {
